V3960:Fix component name on P880

--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P880.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P880.xaml
@@ -225,15 +225,15 @@
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="781" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-62-LEV" Canvas.Left="813" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-61-LEV" Canvas.Left="683" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="745" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="745" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ECS6" Canvas.Left="607" Canvas.Top="301" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ECS7" Canvas.Left="893" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="643" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="897-01-MA1" Canvas.Left="846" Canvas.Top="541" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="895-01-MA1" Canvas.Left="1020" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="880-71-ECS2" Canvas.Left="1098" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <TextBlock VerticalAlignment="Top" Canvas.Top="318" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
-        <TextBlock VerticalAlignment="Top" Canvas.Top="367" Text="{lex:Loc Bag Station I}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
+        <TextBlock VerticalAlignment="Center" Canvas.Top="318" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
+        <TextBlock VerticalAlignment="Center" Canvas.Top="367" Text="{lex:Loc Bag Station I}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1143" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
