V3923: General components reorganize on Synoptics

--- a/Prevu.Synoptics.V3923_Evanses/Details/D527.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D527.xaml
@@ -12,7 +12,7 @@
         <Machines:V01_Hopper Canvas.Left="13" Canvas.Top="13" Height="300" Width="260" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" SignalName="LSHA" Canvas.Left="147" Canvas.Top="33" />
         <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSH" Canvas.Left="147" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSL" Canvas.Left="147" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:SignalLabel ComponentName="527-61-LEV" SignalName="LSLA" Canvas.Left="147" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="527-61-LEV" Canvas.Left="28" Canvas.Top="112"/>
     </Canvas>
 </UserControl>
