--- a/Prevu.Synoptics.V3923_Evanses/Pages/P880.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P880.xaml
@@ -6,6 +6,7 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
 			 xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P880" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
@@ -118,7 +119,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="217" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS6" Canvas.Left="486" Canvas.Top="455" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS7" Canvas.Left="885" Canvas.Top="445" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Color="Air" Canvas.Left="1012" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="488" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Color="Air" Canvas.Left="1012" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Canvas.Left="910" Canvas.Top="618" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="895-01-MA1" Canvas.Left="952" Canvas.Top="583" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
@@ -162,7 +163,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="526" StatusComponent="897-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1035" Canvas.Top="357" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="526" StatusComponent="897-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1235" Canvas.Top="357" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -172,7 +173,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="566" StatusComponent="897-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="734" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="766" StatusComponent="897-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="734" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="615" Canvas.Top="781" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="552" Canvas.Top="593" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="50" Width="50">
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
@@ -224,12 +225,30 @@
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="781" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-62-LEV" Canvas.Left="813" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-61-LEV" Canvas.Left="683" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="745" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="745" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ECS6" Canvas.Left="607" Canvas.Top="301" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ECS7" Canvas.Left="893" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="643" Canvas.Top="17" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="897-01-MA1" Canvas.Left="846" Canvas.Top="541" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="895-01-MA1" Canvas.Left="1020" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="880-71-ECS2" Canvas.Left="1098" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <TextBlock VerticalAlignment="Center" Canvas.Top="318" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
+        <TextBlock VerticalAlignment="Center" Canvas.Top="367" Text="{lex:Loc Bag Station I}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1212" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1143" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1200" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1200" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1409" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
     </Canvas>
 </UserControl>
