--- a/Prevu.Synoptics.V3923_Evanses/Pages/P061.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P061.xaml
@@ -8,6 +8,7 @@
              x:Class="Prevu.Synoptics.P061" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
+        <Labels:Pipe Width="71" StatusComponent="079-01-MA1" Canvas.Left="1085" Canvas.Top="714" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="43" StatusComponent="123-01-MA1" Canvas.Left="902" Canvas.Top="54" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="116" StatusComponent="123-01-MA1" Canvas.Left="885" Canvas.Top="110" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -61,7 +62,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="53" StatusComponent="106-01-MA1" Canvas.Left="119" Canvas.Top="657" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="48" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1284" Canvas.Top="534" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="48" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1280" Canvas.Top="651" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -71,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="155" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1302" Canvas.Top="589" VisibilityComponent="081-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="155" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1298" Canvas.Top="706" VisibilityComponent="081-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -81,7 +82,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1268" Canvas.Top="626" VisibilityComponent="081-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="80" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1264" Canvas.Top="743" VisibilityComponent="081-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -212,7 +213,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="188" StatusComponent="075-01-MA1" Canvas.Left="1063" Canvas.Top="342" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="136" StatusComponent="075-01-MA1" Canvas.Left="1016" Canvas.Top="508" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -222,7 +223,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="122" StatusComponent="077-01-MA1" Canvas.Left="1326" Canvas.Top="314" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="96" StatusComponent="079-01-MA1" Canvas.Left="1106" Canvas.Top="668" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -232,7 +233,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="122" StatusComponent="079-01-MA1" Canvas.Left="1166" Canvas.Top="445" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="136" StatusComponent="077-01-MA1" Canvas.Left="865" Canvas.Top="642" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -244,8 +245,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="89" StatusComponent="051-01-MA1" Canvas.Left="346" Canvas.Top="714" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="95" StatusComponent="051-01-MA1" Canvas.Left="431" Canvas.Top="104" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="74" StatusComponent="075-01-MA1" Canvas.Left="1085" Canvas.Top="434" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="74" StatusComponent="075-01-MA1" Canvas.Left="1155" Canvas.Top="250" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="81" StatusComponent="079-01-MA1" Canvas.Left="1152" Canvas.Top="622" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="40" StatusComponent="127-01-MA1" Canvas.Left="908" Canvas.Top="149" RenderTransformOrigin="0.5,0.5" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -266,11 +266,11 @@
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="516" Canvas.Top="357" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="516" Canvas.Top="228" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="516" Canvas.Top="487" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="1219" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="1219" Canvas.Top="242" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="1215" Canvas.Top="615" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="919" Canvas.Top="562" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="919" Canvas.Top="426" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="919" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="1219" Canvas.Top="371" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="919" Canvas.Top="706" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="919" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="583" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="655" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -285,10 +285,10 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1286" Canvas.Top="642" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1358" Canvas.Top="642" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle Height="2" Stroke="Black" Width="152" Canvas.Left="1252" Canvas.Top="628" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1218" Canvas.Top="598" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1282" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1354" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="2" Stroke="Black" Width="152" Canvas.Left="1248" Canvas.Top="745" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1214" Canvas.Top="715" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -298,7 +298,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1258" Canvas.Top="526" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1254" Canvas.Top="643" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -335,14 +335,14 @@
         <Labels:DeviceLabel ComponentName="057-01-MA1" Canvas.Left="628" Canvas.Top="300" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="055-01-MA1" Canvas.Left="489" Canvas.Top="168" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="059-01-MA1" Canvas.Left="489" Canvas.Top="429" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="081-01-MA1" Canvas.Left="1331" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="081-71-ECS1" Canvas.Left="1184" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="081-71-ECS2" Canvas.Left="1406" Canvas.Top="656" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="081-21-CV1" Canvas.Left="1192" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="077-01-MA1" Canvas.Left="1331" Canvas.Top="184" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="081-01-MA1" Canvas.Left="1331" Canvas.Top="559" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="081-71-ECS1" Canvas.Left="1180" Canvas.Top="773" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="081-71-ECS2" Canvas.Left="1402" Canvas.Top="773" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="081-21-CV1" Canvas.Left="1188" Canvas.Top="667" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="077-01-MA1" Canvas.Left="892" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="075-01-MA1" Canvas.Left="1031" Canvas.Top="369" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="073-01-MA1" Canvas.Left="892" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="079-01-MA1" Canvas.Left="1192" Canvas.Top="313" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="079-01-MA1" Canvas.Left="1031" Canvas.Top="645" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="071-01-MA1" Canvas.Left="1031" Canvas.Top="106" HorizontalAlignment="Left" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
