V1601: Fixes on Synoptics

--- a/Prevu.Synoptics.V1601_Polytrade/Pages/P330.xaml
+++ b/Prevu.Synoptics.V1601_Polytrade/Pages/P330.xaml
@@ -10,8 +10,8 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Width="165" StatusComponent="324-01-MA1" PipeHeight="Medium"  Canvas.Left="928" Canvas.Top="144" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionOne"/>
-        <Labels:Pipe Width="82" StatusComponent="332-03-MA1" PipeHeight="Medium" Canvas.Left="1388" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="114" StatusComponent="332-03-MA1" PipeHeight="Medium" Canvas.Left="1336" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="82" StatusComponent="332-02-MA1" PipeHeight="Medium" Canvas.Left="1388" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="114" StatusComponent="332-02-MA1" PipeHeight="Medium" Canvas.Left="1336" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -26,7 +26,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Canvas.Left="758" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="553" StatusComponent="330-03-MA1" PipeHeight="Medium" Canvas.Left="917" Canvas.Top="642" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="553" StatusComponent="330-02-MA1" PipeHeight="Medium" Canvas.Left="917" Canvas.Top="642" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="86" StatusComponent="318-01-MA1" PipeHeight="Medium"  Canvas.Left="343" Canvas.Top="440" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -64,7 +64,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" StatusComponent="332-03-MA1" PipeHeight="Medium" Canvas.Left="1318" Canvas.Top="518" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="80" StatusComponent="332-02-MA1" PipeHeight="Medium" Canvas.Left="1318" Canvas.Top="518" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Canvas.Left="946" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="60" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="608" Canvas.Top="811" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:Pipe Width="54" StatusComponent="316-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="212" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -145,5 +145,6 @@
         <Labels:DeviceLabel ComponentName="316-01-MA1" Canvas.Left="272" Canvas.Top="292" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="311-01-MA1" Canvas.Left="272" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="311-71-ECS1" Canvas.Left="27" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="311-61-LS1" Canvas.Left="48" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
