--- a/Prevu.Synoptics.V1601_Polytrade/Pages/P850.xaml
+++ b/Prevu.Synoptics.V1601_Polytrade/Pages/P850.xaml
@@ -10,8 +10,8 @@
              x:Class="Prevu.Synoptics.P850" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="130" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="270" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="850-01-MA1" PipeHeight="Medium" Canvas.Left="362" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Top" >
+        <Labels:Pipe Width="130" RenderTransformOrigin="0.5,0.5" StatusComponent="578-01-MA1" PipeHeight="Medium" Canvas.Left="270" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:Pipe Width="180" RenderTransformOrigin="0.5,0.5" StatusComponent="850-01-MA1" PipeHeight="Medium" Canvas.Left="306" Canvas.Top="486" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -33,46 +33,38 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Canvas.Left="366" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="578-01-MA1" PipeHeight="Medium" Canvas.Left="366" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1"  Color="Air" Canvas.Left="310" Canvas.Top="610" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" PipeHeight="Medium" Canvas.Left="402" Canvas.Top="608" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:Pipe Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="866-01-MA1" PipeHeight="Medium" Canvas.Left="342" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Top" >
+        <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="869-01-MA1"  Color="Air" Canvas.Left="310" Canvas.Top="610" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="869-01-MA1" PipeHeight="Medium" Canvas.Left="402" Canvas.Top="608" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="997-71-ECS1" PipeHeight="Medium" Canvas.Left="1114" Canvas.Top="298" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1114" Canvas.Top="298" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="90" StatusComponent="997-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS1" Canvas.Left="1052" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS1" Canvas.Left="1052" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="92" StatusComponent="997-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS2" Canvas.Left="1186" Canvas.Top="445" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="92" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-25-CV1" VisibilitySignal="LS2" Canvas.Left="1186" Canvas.Top="445" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="254" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="916" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="253" RenderTransformOrigin="0.5,0.5" StatusComponent="997-71-ECS1" PipeHeight="Medium" Canvas.Left="916" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:V01_ScarpaTrasporto Canvas.Left="358" Canvas.Top="574" Height="50" Width="84" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_VS_Airlock Canvas.Left="366" Canvas.Top="454" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SA_Elutriator Canvas.Left="354" Canvas.Top="220" Height="200" Width="84" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="366" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="270" Canvas.Top="588" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -87,6 +79,8 @@
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1082" Canvas.Top="328" Height="93" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="888" Canvas.Top="218" Height="74" Width="54" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="596" Canvas.Top="576" Height="74" Width="54" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="560" Canvas.Top="592" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="974" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_External Canvas.Left="546" Canvas.Top="636" RenderTransformOrigin="0.5,0.5" Height="42" Width="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_External Canvas.Left="960" Canvas.Top="281" RenderTransformOrigin="0.5,0.5" Height="42" Width="30" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:V01_External.RenderTransform>
@@ -95,8 +89,6 @@
                 </TransformGroup>
             </Machines:V01_External.RenderTransform>
         </Machines:V01_External>
-        <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="560" Canvas.Top="592" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle Height="52" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="974" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="190" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="756" Canvas.Left="409" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
@@ -110,13 +102,12 @@
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="850-01-MA1" JumpToLabel="578-01-MA1" Canvas.Left="202" Canvas.Top="58" />
         <Labels:DeviceLabel ComponentName="850-01-MA1" Canvas.Left="268" Canvas.Top="142" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="854-01-MA1" Canvas.Left="244" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="868-01-MA1" Canvas.Left="250" Canvas.Top="532" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="866-01-MA1" Canvas.Left="432" Canvas.Top="460" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="311-71-ECS5" Canvas.Left="442" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="311-71-ECS6" Canvas.Left="584" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="311-71-ECS7" Canvas.Left="584" Canvas.Top="750" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="869-01-MA1" Canvas.Left="250" Canvas.Top="532" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="869-71-ECS5" Canvas.Left="442" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="869-71-ECS6" Canvas.Left="584" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="869-71-ECS7" Canvas.Left="584" Canvas.Top="750" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1140" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1120" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="311-71-ECS1" Canvas.Left="1008" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-71-ECS1" Canvas.Left="1008" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
