V1601: Added missing Components

--- a/Prevu.Synoptics.V1601_Polytrade/Pages/P850.xaml
+++ b/Prevu.Synoptics.V1601_Polytrade/Pages/P850.xaml
@@ -109,5 +109,7 @@
         <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1140" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1120" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-71-ECS1" Canvas.Left="1008" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-61-BAG" Canvas.Left="1053" Canvas.Top="610" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="997-62-BAG" Canvas.Left="1188" Canvas.Top="610" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
