V4066: Fixed Component name on P350

--- a/Prevu.Synoptics.V4066_BRR/Pages/P350.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P350.xaml
@@ -213,7 +213,7 @@
         <Labels:DeviceLabel ComponentName="380-02-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1403" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="380-32-CV1"  Canvas.Left="1026" Canvas.Top="358" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="351-41-LT1" Canvas.Left="260" Canvas.Top="384" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="377-45-CT1" Canvas.Left="1121" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="377-44-FT1" Canvas.Left="1121" Canvas.Top="727" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="353-01-MA1" Canvas.Left="440" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="359-31-CV1" Canvas.Left="55" Canvas.Top="210" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
